[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Thakur",email = "at8482937@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pymupdf (>=1.26.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
