[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Thakur", email = "at8482937@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.3.9,<2.0.0)",  
    "aiofiles (>=23.2.1,<24.0.0)",  
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
